--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "cool-ascii-faces": "^1.3.4",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "mongoose": "^5.4.3",
+    "nodemon": "^1.18.9",
+    "path": "^0.12.7",
     "pg": "^7.7.1"
   },
   "devDependencies": {
