--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cool-ascii-faces": "^1.3.4",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "express-session": "^1.15.6",
     "mongoose": "^5.4.3",
     "nodemon": "^1.18.9",
     "path": "^0.12.7",
