--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.3",
+    "cookie-parser": "^1.4.3",
     "cool-ascii-faces": "^1.3.4",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "express-session": "^1.15.6",
+    "method-override": "^3.0.0",
     "mongoose": "^5.4.3",
+    "morgan": "^1.9.1",
     "nodemon": "^1.18.9",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "pg": "^7.7.1"
   },
